--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     <!-- Custom styles for this template-->
     <link href="views/css/sb-admin-2.min.css" rel="stylesheet">
 
+    <link rel="shortcut icon" type="image/ico" href="views/img/favicon.ico" />
+
+
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Android -->
+    <meta name="theme-color" content="#5a5c69">
+
+    <!-- IOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <meta name="apple-mobile-web-app-title" content="Twittor!">
+
 </head>
 
 <body class="bg-gradient-success">
@@ -74,6 +89,8 @@
 
     <!-- Custom scripts for all pages-->
     <script src="views/js/sb-admin-2.min.js"></script>
+
+    <script src="views/js/app.js"></script>
 
 </body>
 
