--- a/plantilla.html
+++ b/plantilla.html
@@ -21,6 +21,23 @@
     <!-- Custom styles for this page -->
     <link href="views/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 
+
+    <link rel="shortcut icon" type="image/ico" href="views/img/favicon.ico" />
+
+
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Android -->
+    <meta name="theme-color" content="#5a5c69">
+
+    <!-- IOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <meta name="apple-mobile-web-app-title" content="Twittor!">
+
+
 </head>
 
 <body id="page-top">
