--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body class="bg-gradient-success">
+<body class="bg-gradient-light">
     <br>
     <br>
     <div class="container">
