--- a/plantilla.html
+++ b/plantilla.html
@@ -28,7 +28,7 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Android -->
-    <meta name="theme-color" content="#2d2d2d">
+    <meta name="theme-color" content="#000000">
 
     <!-- IOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
