--- a/plantilla.html
+++ b/plantilla.html
@@ -167,105 +167,37 @@
 
 
 
-                    <!-- Button Modal -->
-
-                    <form class="user">
-                        <a class="btn btn-success btn-user text-light" data-toggle="modal" data-target="#exampleModal">Launch Demo Modal</a>
-
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h6 class="m-0 font-weight text-dark">Collapsable Card Example</h6>
-                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                                    </div>
-                                    <div class="modal-body">
-
-
-
-                                        <div class="text-center">
-                                        </div>
-                                        <form class="user">
-                                            <div class="form-group row">
-                                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                                    <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name">
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email Address">
-                                            </div>
-                                            <div class="form-group row">
-                                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password">
-                                                </div>
-                                            </div>
-                                        </form>
-
-                                    </div>
-
-                                    <div class="modal-footer">
-                                        <a href="login.html" class="btn btn-success btn-user">
-                                            Register
-                                          </a>
-                                        <hr>
-                                        <a href="plantilla.html" class="btn btn-danger btn-user">
-                                            Cancelar
-                                        </a>
-
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-
-                    <br>
-
-
-
 
 
 
 
                     <!-- Collapsable Card Example -->
-                    <div class="card shadow mb-4">
+                    <div class="card mb-4">
                         <!-- Card Header - Accordion -->
-                        <a href="#collapseCardExample" class="d-block card-header py-3" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                            <h6 class="m-0 font-weight text-dark">Collapsable Card Example</h6>
+                        <a href="#collapseCardExample" class="d-block card-header py-3 collapsed" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseCardExample">
+                            <h6 class="m-0 font-weight text-dark text-center">Registrar Usuario</h6>
                         </a>
                         <!-- Card Content - Collapse -->
-                        <div class="collapse show" id="collapseCardExample">
+                        <div class="collapse" id="collapseCardExample">
                             <div class="card-body">
-
-
-                                <div class="text-center">
-                                    <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
-                                </div>
                                 <form class="user">
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
-                                            <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name">
+                                            <input type="text" class="form-control form-control-user" id="exampleFirstName1" placeholder="First Name">
                                         </div>
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
+                                            <input type="text" class="form-control form-control-user" id="exampleLastName1" placeholder="Last Name">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email Address">
+                                        <input type="email" class="form-control form-control-user" id="exampleInputEmail1" placeholder="Email Address">
                                     </div>
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
-                                            <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                                            <input type="password" class="form-control form-control-user" id="exampleInputPassword1" placeholder="Password">
                                         </div>
                                         <div class="col-sm-6">
-                                            <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password">
+                                            <input type="password" class="form-control form-control-user" id="exampleRepeatPassword1" placeholder="Repeat Password">
                                         </div>
                                     </div>
                                     <a href="login.html" class="btn btn-success btn-user">
