--- a/plantilla.html
+++ b/plantilla.html
@@ -128,8 +128,8 @@
                 <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow">
 
                     <!-- Sidebar Toggle (Topbar) -->
-                    <button id="sidebarToggleTop" class="btn btn-success d-md-none rounded-circle mr-3">
-                        <i class="fa fa-bars"></i>
+                    <button id="sidebarToggleTop" class="bg bg-success d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars text-white"></i>
                     </button>
 
 
@@ -174,8 +174,8 @@
                     <!-- Collapsable Card Example -->
                     <div class="card mb-4">
                         <!-- Card Header - Accordion -->
-                        <a href="#collapseCardExample" class="d-block card-header py-3 collapsed" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseCardExample">
-                            <h6 class="m-0 font-weight text-dark text-center">Registrar Usuario</h6>
+                        <a href="#collapseCardExample" class="d-block card-header bg-gradient-success py-3 collapsed" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseCardExample">
+                            <h6 class="m-0 font-weight text-white text-center">Registrar Usuario</h6>
                         </a>
                         <!-- Card Content - Collapse -->
                         <div class="collapse" id="collapseCardExample">
